--- a/index.html
+++ b/index.html
@@ -43,18 +43,33 @@
 			<div class="slides">
 
 				<section>
-					<h2>Hacking 101</h2>
-					<p>by nepotism(?)</p>
+					<h2>How to hack</h2>
+					<p>by nepotism</p>
 				</section>
 
 				<section>
-					<!-- -->
+					<p>disclaimer: do not do anything illegal</p>
 				</section>
 
-				
-
 				<section>
-					<!-- -->
+					<section>
+						<h2>Hacking 101</h2>
+						<p>by mohammed</p>
+					</section>
+					<section>
+						<h3>What am I covering</h3>
+						<ul class="fragments">
+							<li class="fragment">Definition of hacking</li>
+							<li class="fragment">What is a hacker and the types of hackers</li>
+							<li class="fragment">Anonymity vs infiltration</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Why am I covering this?</h3>
+					</section>
+					<section>
+						<iframe width="853" height="480" src="https://www.youtube.com/embed/u8qgehH3kEQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+					</section>
 				</section>
 
 				<section>
@@ -62,7 +77,9 @@
 				</section>
 
 				<section>
-					<!-- -->
+					<section>
+						<h2>What is hacking?</h2>
+					</section>
 				</section>
 
 				<section>
