--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 						<h2>Hacking 101</h2>
 						<p>by mohammed</p>
 					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>What am I not covering?</h3>
+					</section>
 					<section>
 						<h3>What am I covering</h3>
 						<ul class="fragments">
@@ -65,15 +71,33 @@
 						</ul>
 					</section>
 					<section>
+						<iframe width="853" height="480" src="https://www.youtube.com/embed/u8qgehH3kEQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+					</section>
+					<section>
+						<h3>uhhhhh</h3>
+						<ul class="fragments">
+							<li class="fragment">No one hacks a single computer.</li>
+							<li class="fragment">No one makes is obvious they're hacking.</li>
+							<li class="fragment">Hacking is extremely time-consuming.</li>
+						</ul>
+					</section>
+					<section>
 						<h3>Why am I covering this?</h3>
 					</section>
 					<section>
-						<iframe width="853" height="480" src="https://www.youtube.com/embed/u8qgehH3kEQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+						<img src="presentation\images\hacker_1.jpg" />
+					</section>
+					<section>
+						<img src="presentation\images\anonymous_1.jpg" />
 					</section>
 				</section>
 
 				<section>
 					<h3>Questions?</h3>
+				</section>
+
+				<section>
+					
 				</section>
 
 				<section>
