--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
 				<section>
 					<section>
 						<h2>What is hacking?</h2>
+						<p class="fragment" style="text-align: left">
+							us: exploratory programming
+						</p>
+						<p class="fragment" style="text-align: left">
+							them: security hacker; breaching electronic systems by exploiting computer weaknesses 
+						</p>
 					</section>
 				</section>
 
