what is hacking. im super duper behind /:

--- a/index.html
+++ b/index.html
@@ -97,17 +97,32 @@
 				</section>
 
 				<section>
-					
-				</section>
-
-				<section>
 					<section>
-						<h2>What is hacking?</h2>
-						<p class="fragment" style="text-align: left">
+						<h3>What is hacking?</h3>
+						<p class="fragment">
 							us: exploratory programming
 						</p>
-						<p class="fragment" style="text-align: left">
+						<ul class="fragments">
+							<li class="fragment">Analysis and exploration</li>
+							<li class="fragment">Prototyping/proof of concept</li>
+							<li class="fragment">Quick coding</li>
+						</ul>
+					</section>
+					<section>
+						<h3>What is hacking?</h3>
+						<p class="fragment">
 							them: security hacker; breaching electronic systems by exploiting computer weaknesses 
+						</p>
+						<ul class="fragments">
+							<li class="fragment">Breaking into a system</li>
+							<li class="fragment">Crack a password</li>
+							<li class="fragment">Detect weaknesses</li>
+						</ul>
+					</section>
+					<section>
+						<h3>What is hacking?</h3>
+						<p>
+							me: clever use of computer science to manipulate a logical system into doing something unintended.
 						</p>
 					</section>
 				</section>
