Types of hackers section.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,37 @@
 				</section>
 
 				<section>
-					<!-- -->
+					<section>
+						<h3>Types of hackers</h3>
+						<ul class="fragments">
+							<li class="fragment">White hat</li>
+							<li class="fragment">Black hat</li>
+							<li class="fragment">Grey hat</li>
+						</ul>
+					</section>
+					<section class="fragments">
+						<h3>White hat</h3>
+						<p class="fragment">Professional security specialists, primarily working to prevent malicious hacking.</p>
+						<ul class="fragment">
+							<li>Antivirus</li>
+							<li>Code auditing</li>
+							<li>Encryption</li>
+							<li>Network and system admins</li>
+						</ul>
+					</section>
+					<section class="fragments">
+						<h3>Black hat</h3>
+						<p class="fragment">Personal gain and malicious intent.</p>
+						<ul class="fragment">
+							<li>Stealing information - <br/>CC, SSN, medical records, etc.</li>
+							<li>Damage a system</li>
+							<li>Disturb the peace</li>
+						</ul>
+					</section>
+					<section class="fragments">
+						<h3>Grey hat</h3>
+						<p class="fragment">Somewhere in the middle? Hacking for the sake of hacking, but not really helping or hindering anyone.</p>
+					</section>
 				</section>
 
 				<section>
