Link to github pages site.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<section>
 					<h2>How to hack</h2>
-					<p>by nepotism</p>
+					<a href="https://mhhussain.github.io/Hacking101/#/">https://mhhussain.github.io/Hacking101/#/</a>
 				</section>
 
 				<section>
