Added story and why linux sections.

--- a/index.html
+++ b/index.html
@@ -170,11 +170,36 @@
 				</section>
 
 				<section>
-					<!-- -->
+					<section>
+						<h3 class="fragment">Mission</h3>
+						<p class="fragment">Should you choose to accept</p>
+					</section>
+					<section>
+						<p style="font-size: 22px">
+							So let's say you are tasked with a mission. Should you choose to accept. You're job is to break into a super secure building and steal the super secret thing that pivotal to the plot. If you were the thief, how would you go about it? Let's do this in simple movie fashion for the sake of simplicity. Well first thing, we need an alias to burn. Perfect, there's a guy for that. There always is. Then you'd need the blueprints. Gotta figure out the lay of the land. What's your plan? Well it's simple. First, you find an inside man with access and steal his credentials for access. Next you create a diversion. You phone in a bomb threat, doing all that phone routing voodoo to make sure it's untraceable. The building empties out. Perfect. Now you break in, steal the thing. But now what? You're getaway! Exactly. You're job is to make it out with the crowd, so you ditch the super secret spy clothes for a normal suit. The thing though. That needs a different route out. You hire some goons (cash). They pick up the package, and drive around town swapping cars every so often to avoid being found, and finally drop the goods off at a designated location. You pay them, burn your alias and skip town. Boom, stolen goods.
+						</p>
+					</section>
 				</section>
 
 				<section>
-					<!-- -->
+					<section>
+						<h3>Anonymity &amp; Infiltration</h3>
+					</section>
+					<section>
+						<p>Anonymity</p>
+						<h3 class="fragment">Why Linux</h3>
+						<ul class="fragment">
+							<li>Open source</li>
+							<li>Small footprint</li>
+							<li>More secure</li>
+							<li>Powerful CLI</li>
+							<li>Lightweight and portable</li>
+							<li>Friendlier network options</li>
+						</ul>
+					</section>
+					<section>
+						<p>Anonymity</p>
+					</section>
 				</section>
 
 				<section>
