Added proxy chains section.

--- a/index.html
+++ b/index.html
@@ -199,6 +199,21 @@
 					</section>
 					<section>
 						<p>Anonymity</p>
+						<h3 class="fragment">Proxy chain</h3>
+						<p class="fragment">Proxy: Middle man. Requests information your behalf and parrots it back to you.</p>
+						<aside class="notes">
+							- Imagine you have a health insurance, but your friend Olly Oxenfree does not.
+							- Routing calls through a bunch of different phones.
+						</aside>
+					</section>
+					<section>
+						<p>Tor &amp; VPN</p>
+						<h3 class="fragment">Proxy chain</h3>
+						<p class="fragment">Proxy: Middle man. Requests information your behalf and parrots it back to you.</p>
+						<aside class="notes">
+							- Imagine you have a health insurance, but your friend Olly Oxenfree does not.
+							- Routing calls through a bunch of different phones.
+						</aside>
 					</section>
 				</section>
 
