Added Tor section.

--- a/index.html
+++ b/index.html
@@ -208,12 +208,13 @@
 					</section>
 					<section>
 						<p>Tor &amp; VPN</p>
-						<h3 class="fragment">Proxy chain</h3>
-						<p class="fragment">Proxy: Middle man. Requests information your behalf and parrots it back to you.</p>
-						<aside class="notes">
-							- Imagine you have a health insurance, but your friend Olly Oxenfree does not.
-							- Routing calls through a bunch of different phones.
-						</aside>
+						<h3 class="fragment">Tor</h3>
+						<p class="fragment" style="font-size: 22px">Similar to proxies, except far more advanced and secure. It encrypts all information including packet headers and sends information randomly from node to node. Each node then decrypts only the information that it needs to know where the packet came from and where it's going. Then reencrypts and sends it along.</p>
+					</section>
+					<section>
+						<p>Tor &amp; VPN</p>
+						<h3 class="fragment">VPN</h3>
+						<p class="fragment" style="font-size: 22px"></p>
 					</section>
 				</section>
 
