Added VPN section.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<section>
 						<p>Tor &amp; VPN</p>
 						<h3 class="fragment">VPN</h3>
-						<p class="fragment" style="font-size: 22px"></p>
+						<p class="fragment" style="font-size: 22px">Is a tunnel through a private server that <b>all</b> internet traffic travels through.</p>
 					</section>
 				</section>
 
