Added VPN section.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
 						<p>Tor &amp; VPN</p>
 						<h3 class="fragment">VPN</h3>
 						<p class="fragment" style="font-size: 22px">Is a tunnel through a private server that <b>all</b> internet traffic travels through.</p>
+						<aside class="notes">
+							- The goons were your proxy/vpn and they bounced from car to car. And let's say you only told them the location of the first car, and each car had the location of the next until you get to the end.
+						</aside>
+					</section>
+					<section>
+						<p>Anonymity</p>
+						<h3 class="fragment">macchanger</h3>
+						<p class="fragment" style="font-size: 22px">Is a tunnel through a private server that <b>all</b> internet traffic travels through.</p>
 					</section>
 				</section>
 
