Added macchanger section.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,13 @@
 					<section>
 						<p>Anonymity</p>
 						<h3 class="fragment">macchanger</h3>
-						<p class="fragment" style="font-size: 22px">Is a tunnel through a private server that <b>all</b> internet traffic travels through.</p>
+						<p class="fragment" style="font-size: 22px">Media Access Control (MAC) Address. A unique identifier given to each device connected to a computer.</p>
+						<p class="fragment">
+							<span class="fragment highlight-red">6C:70:9F</span>:81:A7:C2
+						</p>
+						<aside class="notes">
+							- First three number are manufacturer specific. The next three are unique to a machine. MAC addresses only ever make it as far as the router and are used to identify a specific machine. You can restrict access to a network by MAC address.
+						</aside>
 					</section>
 				</section>
 
