--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
 				</section>
 
 				<section>
+					<h3>Questions?</h3>
+				</section>
+
+				<section><!-- --></section>
+
+				<section>
 					<p>Final note: Stay in school.</p>
 				</section>
 
