--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
 				<section>
 					<section>
+						<p>Tools of the trade</p>
 						<h3>Anonymity &amp; Infiltration</h3>
 					</section>
 					<section>
