Added footprinting and DOS/DDOS sections.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,31 @@
 					<h3>Questions?</h3>
 				</section>
 
-				<section><!-- --></section>
+				<section>
+					<section>
+						<p>Tools of the trade</p>
+						<h3>Anonymity &amp; Infiltration</h3>
+					</section>
+					<section>
+						<p>Infiltration</p>
+						<h3 class="fragment">Footprinting and nmap</h3>
+						<p class="fragment">Gathering information about a computer system and all devices and systems that it can connect to.</p>
+						<aside class="notes">
+							- Reconnaissance. Allows you to map out a network. Ping sweeps, port scanning
+							- Nmap is a program that allows you to do that.
+							- Ransomware, web crawlers
+						</aside>
+					</section>
+					<section>
+						<p>Infiltration</p>
+						<h3 class="fragment">DOS/DDOS and Signal Jamming</h3>
+						<p>Denial of Service (DOS) or Distributed Denial of Service (DDOS) is a technique of overloading a system by issuing a flurry of requests.</p>
+						<aside class="notes">
+							- There are many ways to prevent this, the easiest is to block the IP or MAC Address. A DDOS attack attempts to subvert that.
+							- Also companies and programs that offer DOS and DDOS as a service for stress testing purposes.
+						</aside>
+					</section>
+				</section>
 
 				<section>
 					<p>Final note: Stay in school.</p>
