Added reverse shell section.

--- a/index.html
+++ b/index.html
@@ -261,6 +261,15 @@
 							- Also companies and programs that offer DOS and DDOS as a service for stress testing purposes.
 						</aside>
 					</section>
+					<section>
+						<p>Infiltration</p>
+						<h3 class="fragment">Reverse shell</h3>
+						<p>Remote Access Tool (RAT), forces a target machine to connect to you.</p>
+						<aside class="notes">
+							- Typically, you attempt to connect to a target machine, but if you cannot, you can open up a port on your system and have target machine connect to you and give you a remote shell.
+							- Helps get around firewalls. Firewalls typically block access coming in, but rules for outgoing access is not as strict.
+						</aside>
+					</section>
 				</section>
 
 				<section>
