Added backdoor and phishing/ransomeware sections.

--- a/index.html
+++ b/index.html
@@ -273,6 +273,33 @@
 				</section>
 
 				<section>
+					<section>
+						<p>Why does all of this matter?</p>
+					</section>
+					<section>
+						<p>Usecases</p>
+						<h3 class="fragment">DOS networks</h3>
+					</section>
+					<section>
+						<h3>Backdoors</h3>
+						<aside class="notes">
+							- Trojans, malware
+							- Manufacturer built, or implanted
+							- Bugs in code
+							- Forced into code (Wordpress plugins)
+							- Linux Kernel hack
+						</aside>
+					</section>
+					<section>
+						<h3>Phishing and ransomware</h3>
+						<aside class="notes">
+							- Man in the middle
+							- Uses footprinting							
+						</aside>
+					</section>
+				</section>
+
+				<section>
 					<p>Final note: Stay in school.</p>
 				</section>
 
