Added phishing and ransomware section.

--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
 							- Helps get around firewalls. Firewalls typically block access coming in, but rules for outgoing access is not as strict.
 						</aside>
 					</section>
+					<section>
+						<p>Infiltration</p>
+						<h3 class="fragment">Rainbow tables</h3>
+					</section>
 				</section>
 
 				<section>
@@ -278,11 +282,12 @@
 					</section>
 					<section>
 						<p>Usecases</p>
-						<h3 class="fragment">DOS networks</h3>
+						<h3 class="fragment">DOS-ing networks</h3>
 					</section>
 					<section>
 						<h3>Backdoors</h3>
 						<aside class="notes">
+							- Bypasses security
 							- Trojans, malware
 							- Manufacturer built, or implanted
 							- Bugs in code
@@ -294,7 +299,8 @@
 						<h3>Phishing and ransomware</h3>
 						<aside class="notes">
 							- Man in the middle
-							- Uses footprinting							
+							- Uses footprinting
+							- Evil twin				
 						</aside>
 					</section>
 				</section>
