--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 							<li class="fragment">Definition of hacking</li>
 							<li class="fragment">What is a hacker and the types of hackers</li>
 							<li class="fragment">Anonymity vs infiltration</li>
+							<li class="fragment">Usecases</li>
 						</ul>
 					</section>
 					<section>
